Use checker framework to check for nulls